<?xml version="1.0" encoding="utf-8"?>   
<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:gravity="bottom"
            > 
            
    <TextView 
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="90dp"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="20dp"
		android:text="@string/tela_escopo_titulo"
		android:textSize="22sp"
		android:textColor="#ff00b0f0"/>

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
    >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
            >
                
                  <EditText
                   android:id="@+id/textotitulosistema"
                   android:layout_width="fill_parent"  
                   android:layout_height="wrap_content"  
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:textSize="15sp"
                   android:hint="@string/tela_escopo_hint_titulo_sistema"
                   /> 
    
                    <EditText
                    android:id="@+id/textodescricao"
                    android:layout_width="fill_parent"  
                    android:layout_height="wrap_content"  
                    android:hint="@string/tela_escopo_hint_descricao"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="15sp"
                    android:minLines="2"
                    /> 

                    <EditText
                    android:id="@+id/textobenefícios"
                    android:layout_width="fill_parent"  
                    android:layout_height="wrap_content"  
                    android:hint="@string/tela_escopo_hint_beneficios"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="15sp"
                    android:minLines="2"
                    /> 

                    <EditText
                    android:id="@+id/textoobjetivos"
                    android:layout_width="fill_parent"  
                    android:layout_height="wrap_content"  
                    android:hint="@string/tela_escopo_hint_objetivos"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="15sp"
                    android:minLines="2"
                    /> 


                    <EditText
                    android:id="@+id/textopublicoalvo"
                    android:layout_width="fill_parent"  
                    android:layout_height="wrap_content"  
                    android:hint="@string/tela_escopo_hint_publico_alvo"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="15sp"
                    />                  
        </LinearLayout>
    </ScrollView>

        <LinearLayout
                android:layout_gravity="bottom"
                android:layout_width="fill_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                >
<Button
	android:id="@+id/botaoSalvarProjeto"
	android:layout_width="fill_parent"
	android:layout_height="54dp"
	android:layout_weight="1"
	android:layout_marginTop="8dp"
	android:layout_marginLeft="5dp"
	android:layout_marginRight="2dp"
	android:gravity="center"
    android:text="@string/tela_escopo_botao_salvar"
        />

<Button
	android:id="@+id/botaoDescartarProjeto"
	android:layout_width="fill_parent"
	android:layout_height="54dp"
	android:layout_weight="1"
	android:layout_marginRight="5dp"
	android:layout_marginLeft="2dp"
	android:layout_marginTop="8dp"
	android:gravity="center"
    android:text="@string/tela_escopo_botao_descartar"
        />
</LinearLayout>
</LinearLayout>
    