<!--
  Este arquivo esta sujeito aos termos e condicoes definidos
  no arquivo 'LICENSE.txt, o qual e parte deste pacote de codigo fonte.
 -->

<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
        android:orientation="vertical"

		xmlns:android="http://schemas.android.com/apk/res/android">
            
<TextView 
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:layout_marginLeft="20dp"
		android:text="@string/tela_sobre_titulo"
		android:textSize="22sp"
		android:textColor="#ff00b0f0"/>     
		
<ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
    >   
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:orientation="vertical">     
	    
 	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal">


	<TextView
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="25dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="20dp"
	    android:text="@string/tela_sobre_versao"
	    android:textColor="#ff888888"
	    android:textSize="14sp" />


	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="25dp"
	    android:layout_marginTop="20dp"
	    android:text="@string/tela_sobre_versao_num"
	    android:textColor="#000000"
	    android:textSize="14sp" />

	</LinearLayout>

   <View
	 android:layout_marginTop="10dp"
	 android:layout_marginBottom="10dp"
	 android:background="#ffcccccc" 
	 android:layout_width = "fill_parent"
	 android:layout_height="1dip"/>
           


    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >


    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="5dp"
        android:text="@string/tela_sobre_desenvolvido_por"
        android:textColor="#ff888888"
        android:textSize="14sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/tela_sobre_meu_nome"
        android:textColor="#000000"
        android:textSize="14sp" />

</LinearLayout>

    <View
 android:layout_marginTop="10dp"
 android:layout_marginBottom="10dp"
 android:background="#ffcccccc" 
 android:layout_width = "fill_parent"
 android:layout_height="1dip"/>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="0dp"
    android:orientation="horizontal" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="15dp"
        android:maxLines="10"
        android:text="@string/tela_sobre_descricao"
        android:textColor="#000000"
        android:textSize="14sp" />

</LinearLayout>

</LinearLayout>
</ScrollView>
</LinearLayout>
